# cachekit

./: .cursorrules  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS  README.md  SECURITY.md  SUMMARY.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: README.md  benchmarks.yml  ci.yml  fuzz.yml  release.yml  rust-clippy.yml
bench-support/: Cargo.toml
bench-support/src/: lib.rs  metrics.rs  operation.rs  registry.rs  workload.rs
benches/: README.md  clock.rs  comparison.rs  fifo.rs  lfu.rs  lru.rs  lru_k.rs  ops.rs  reports.rs  runner.rs  s3_fifo.rs  workloads.rs
benches/common/: metrics.rs  mod.rs  registry.rs  workload.rs
benches/policy/: lfu.rs  lru.rs  lru_k.rs  s3_fifo.rs
docs/: _config.yml  adding-fuzz-targets.md  api-surface.md  benchmarks.md  choosing-a-policy.md  ci-cd-release-cycle.md  compatibility-and-features.md  design.md  faq.md  fuzzing-cicd.md  glossary.md  index.md  integration.md  policies.md  quickstart.md  release-checklist.md  releasing.md  style-guide.md  testing.md  workloads.md
docs/benchmarks/: QUICKSTART.md  README.md  overview.md
docs/benchmarks/latest/: index.md  results.json
docs/benchmarks/v0.2.0/: index.md  results.json
docs/benchmarks/v0.4.0/: charts.html  index.md  results.json
docs/design/: design.md
docs/getting-started/: integration.md  quickstart.md
docs/guides/: api-surface.md  choosing-a-policy.md  compatibility-and-features.md  read-only-traits.md
docs/policies/: 2q.md  README.md  arc.md  car.md  clock-pro.md  clock.md  fifo.md  heap-lfu.md  lfu.md  lifo.md  lirs.md  lru-k.md  lru.md  mfu.md  mru.md  nru.md  random.md  s3-fifo.md  slru.md  ttl.md
docs/policies/roadmap/: README.md  adaptsize.md  arc.md  car.md  gds.md  gdsf.md  hyperbolic.md  lecar.md  lfu-aging.md  lhd.md  lrfu.md  mru.md  opt.md  random.md  rrip.md  sieve.md  slru.md  tinylfu.md
docs/policy-ds/: README.md  clock-ring.md  fixed-history.md  frequency-buckets.md  ghost-list.md  intrusive-list.md  lazy-heap.md  slot-arena.md
docs/release/: ci-cd-release-cycle.md  releasing.md
docs/stores/: README.md  handle.md  hashmap.md  slab.md  weight.md
docs/testing/: adding-fuzz-targets.md  fuzzing-cicd.md  testing.md
examples/: basic_builder.rs  basic_fifo.rs  basic_heap_lfu.rs  basic_lfu.rs  basic_lifo.rs  basic_lru.rs  basic_lru_k.rs  basic_mfu.rs  basic_mru.rs  basic_nru.rs  basic_random.rs  basic_s3_fifo.rs  basic_slru.rs  basic_two_q.rs  dhat_profile.rs  profile_lru_k.rs
fuzz/: Cargo.toml  README.md  run_smoke_tests.sh
fuzz/fuzz_targets/: clock_ring_arbitrary_ops.rs  clock_ring_eviction_patterns.rs  clock_ring_insert_stress.rs  fixed_history_arbitrary_ops.rs  fixed_history_property_tests.rs  fixed_history_record_stress.rs  frequency_buckets_arbitrary_ops.rs  frequency_buckets_property_tests.rs  frequency_buckets_stress.rs  ghost_list_arbitrary_ops.rs  ghost_list_lru_stress.rs  ghost_list_property_tests.rs  interner_arbitrary_ops.rs  interner_property_tests.rs  interner_stress.rs  intrusive_list_arbitrary_ops.rs  intrusive_list_property_tests.rs  intrusive_list_stress.rs  lazy_heap_arbitrary_ops.rs  lazy_heap_property_tests.rs  lazy_heap_stress.rs  shard_selector_arbitrary_ops.rs  shard_selector_distribution.rs  shard_selector_property_tests.rs  slot_arena_arbitrary_ops.rs  slot_arena_property_tests.rs  slot_arena_stress.rs
scripts/: update_benchmark_docs.sh  update_docs_benchmarks.sh  update_docs_benchmarks_test.sh
src/: builder.rs  error.rs  lib.rs  prelude.rs  traits.rs
src/ds/: clock_ring.rs  fixed_history.rs  frequency_buckets.rs  ghost_list.rs  interner.rs  intrusive_list.rs  lazy_heap.rs  mod.rs  shard.rs  slot_arena.rs
src/manager/: cache_manager.rs  mod.rs
src/metrics/: cell.rs  exporter.rs  metrics_impl.rs  mod.rs  snapshot.rs  traits.rs
src/policy/: arc.rs  car.rs  clock.rs  clock_pro.rs  fast_lru.rs  fifo.rs  heap_lfu.rs  lfu.rs  lifo.rs  lru.rs  lru_k.rs  mfu.rs  mod.rs  mru.rs  nru.rs  random.rs  s3_fifo.rs  slru.rs  two_q.rs
src/policy/fifo/: fifo_metrics.rs  fifo_no_metrics.rs  mod.rs
src/store/: handle.rs  hashmap.rs  mod.rs  slab.rs  traits.rs  weight.rs
tests/: README.md  fifo_concurrency.rs  lfu_concurrency.rs  lfu_performance.rs  lru_concurrency.rs  lru_integration_test.rs  lru_k_concurrency.rs  lru_k_performance.rs  lru_performance.rs  nru_concurrency.rs  performance_regression.rs  policy_invariants.rs  slab_concurrency.rs
