[package]
name = "cachekit"
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance, policy-driven cache primitives for Rust systems (FIFO/LRU/ARC) with optional metrics."
homepage = "https://oxidizelabs.github.io/cachekit/"
repository = "https://github.com/OxidizeLabs/cachekit"
documentation = "https://oxidizelabs.github.io/cachekit/"
readme = "README.md"
keywords = ["cache", "lru", "fifo", "arc", "lru-k"]
categories = ["data-structures", "caching"]
exclude = ["/.idea/", "/target/", "/.DS_Store", "/**/.DS_Store"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
manager = []
metrics = []
dhat-heap = ["dhat"]

[dependencies]
parking_lot = "0.12"
log = "0.4"
dhat = { version = "0.3", optional = true }
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.8"
dhat = "0.3"
lru = "0.16"
quick_cache = "0.6"

[[bench]]
name = "fifo"
harness = false

[[bench]]
name = "lru"
harness = false

[[bench]]
name = "lfu"
harness = false

[[bench]]
name = "lru_k"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bin]]
name = "dhat_profile"
path = "src/bin/dhat_profile.rs"
required-features = ["dhat-heap"]
