[package]
name = "cachekit"
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance cache primitives with pluggable eviction policies (LRU, LFU, FIFO, 2Q, Clock-PRO, S3-FIFO) and optional metrics."
homepage = "https://oxidizelabs.github.io/cachekit/"
repository = "https://github.com/OxidizeLabs/cachekit"
documentation = "https://oxidizelabs.github.io/cachekit/"
readme = "README.md"
keywords = ["cache", "lru", "lfu", "eviction", "s3-fifo"]
categories = ["caching", "data-structures"]
exclude = ["/.idea/", "/.DS_Store", "/**/.DS_Store"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
metrics = []

[dependencies]
parking_lot = "0.12"
log = "0.4"
rustc-hash = "2.1"

[dev-dependencies]
criterion = "0.8"
dhat = "0.3"
lru = "0.16"
quick_cache = "0.6"

[[bench]]
name = "clock"
harness = false

[[bench]]
name = "fifo"
harness = false

[[bench]]
name = "lru"
harness = false

[[bench]]
name = "lfu"
harness = false

[[bench]]
name = "lru_k"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "s3_fifo"
harness = false

# Development profile - optimized for fast compilation and good debugging
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Test profile - balanced for test execution speed vs debugging
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

# Release profile - maximum performance for production
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

# Benchmark profile - optimized for consistent performance measurement
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = true
