[package]
name = "bench-support"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "render_docs"
path = "src/bin/render_docs.rs"

[dependencies]
cachekit = { path = ".." }
criterion = "0.8"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
