[package]
name = "bench-support"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "render_docs"
path = "src/bin/render_docs.rs"

[dependencies]
cachekit = { path = "..", features = ["policy-all"] }
criterion = "0.8"
rand = "0.10"
rand_distr = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
