[package]
name = "cachekit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cachekit]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "clock_ring_arbitrary_ops"
path = "fuzz_targets/clock_ring_arbitrary_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "clock_ring_insert_stress"
path = "fuzz_targets/clock_ring_insert_stress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "clock_ring_eviction_patterns"
path = "fuzz_targets/clock_ring_eviction_patterns.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fixed_history_arbitrary_ops"
path = "fuzz_targets/fixed_history_arbitrary_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fixed_history_record_stress"
path = "fuzz_targets/fixed_history_record_stress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fixed_history_property_tests"
path = "fuzz_targets/fixed_history_property_tests.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frequency_buckets_arbitrary_ops"
path = "fuzz_targets/frequency_buckets_arbitrary_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frequency_buckets_stress"
path = "fuzz_targets/frequency_buckets_stress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frequency_buckets_property_tests"
path = "fuzz_targets/frequency_buckets_property_tests.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ghost_list_arbitrary_ops"
path = "fuzz_targets/ghost_list_arbitrary_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ghost_list_lru_stress"
path = "fuzz_targets/ghost_list_lru_stress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ghost_list_property_tests"
path = "fuzz_targets/ghost_list_property_tests.rs"
test = false
doc = false
bench = false
